--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,7 +23,7 @@ email: support.aaf.edu.au
 description: >- # this means to ignore newlines until "baseurl:"
   Documentation for technical connection to the AAF
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: https://github.com/ausaccessfed/dev-portal
 twitter_username: ausaccessfed
 github_username:  ausaccessfed
 logo: "/assets/images/aaflogo.png"
@@ -62,6 +62,7 @@ search:
   button: false
 
 nav_external_links_new_tab: true
+include: [_pages]
 
 # Footer content
 # appears at the bottom of every page's main content
@@ -70,7 +71,7 @@ nav_external_links_new_tab: true
 back_to_top: true
 back_to_top_text: "Back to top"
 
-#footer_content: "Copyright &copy; 2017-2020 Patrick Marsceill. Distributed by an <a href=\"https://github.com/just-the-docs/just-the-docs/tree/main/LICENSE.txt\">MIT license.</a> <a href=\"https://www.netlify.com/\">This site is powered by Netlify.</a>"
+footer_content: "Copyright &copy; 2023 The Australian Access Federation."
 
 # Footer last edited timestamp
 #last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
@@ -90,14 +91,14 @@ plugins:
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+exclude:
+   - .sass-cache/
+   - .jekyll-cache/
+   - gemfiles/
+   - Gemfile
+   - Gemfile.lock
+   - node_modules/
+   - vendor/bundle/
+   - vendor/cache/
+   - vendor/gems/
+   - vendor/ruby/
