--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -79,7 +79,7 @@ footer_content: "Copyright &copy; 2023 The Australian Access Federation."
 
 
 # Build settings
-remote_theme: just-the-docs
+remote_theme: just-the-docs/just-the-docs@v0.7.0
 plugins:
   - jekyll-feed
 
