--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -84,6 +84,9 @@ callouts:
   note:
     title: Note
     color: yellow
+  next_steps:
+    title: Next steps
+    color: green
 
 # Build settings
 remote_theme: just-the-docs/just-the-docs@v0.7.0
