Fix up css, add google fonts

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -44,27 +44,15 @@ plugins:
 # their entries' file path in the `include:` list.
 #
 exclude:
-   - .sass-cache/
-   - .jekyll-cache/
-   - gemfiles/
-   - Gemfile
-   - Gemfile.lock
-   - node_modules/
-   - vendor/bundle/
-   - vendor/cache/
-   - vendor/gems/
-   - vendor/ruby/
+  - Gemfile
+  - Gemfile.lock
+  - vendor
 
 defaults:
- - scope:
-    path: ""
-    type: "tutorials"
-   values:
-    layout: "tutorial"
- - scope:
-    path: ""
-   values:
-    layout: "default"
+  - scope:
+      path: "" # an empty string here means all files in the project
+    values:
+      layout: tutorial
 
 # New tutorials should be added by running:
 #   $ rake tutorial "My tutorial title"
