--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -71,3 +71,17 @@ collections:
     published: 2024-02-06
     author: Your Name <your.name@email.domain>
 
+  connect-a-service:
+    output: true
+    permalink: /:collection/:name
+    title: Connect a service
+    summary: A tutorial for connecting a service
+    category: Beginner # Beginner|Intermediate|Advanced|Series|Non-technical
+    tags:
+      - tutorial
+    difficulty: 1 # number from 1 to 5
+    duration: 10 # number of minutes
+    status: draft # draft or published
+    published: 2024-02-09
+    author: Your Name <your.name@email.domain>
+
