--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -113,3 +113,17 @@ collections:
     published: 2024-02-12
     author: Your Name <your.name@email.domain>
 
+  rapid-connect-integration:
+    output: true
+    permalink: /:collection/:name
+    title: Rapid Connect Integration
+    summary: A tutorial for Rapid Connect Integration
+    category: Beginner # Beginner|Intermediate|Advanced|Series|Non-technical
+    tags:
+      - tutorial
+    difficulty: 1 # number from 1 to 5
+    duration: 10 # number of minutes
+    status: draft # draft or published
+    published: 2024-02-12
+    author: Your Name <your.name@email.domain>
+
