Add tutorial structure

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -141,3 +141,17 @@ collections:
     published: 2024-02-13
     author: Your Name <your.name@email.domain>
 
+  connect-an-oidc-service:
+    output: true
+    permalink: /:collection/:name
+    title: Connect an OIDC Service
+    summary: A tutorial for Connect an OIDC Service
+    category: Beginner # Beginner|Intermediate|Advanced|Series|Non-technical
+    tags:
+      - tutorial
+    difficulty: 1 # number from 1 to 5
+    duration: 10 # number of minutes
+    status: draft # draft or published
+    published: 2024-02-14
+    author: Your Name <your.name@email.domain>
+
