--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -175,7 +175,8 @@ collections:
     permalink: /:collection/:name
     title: VerifID Integration
     summary: A tutorial for Verifid Integration
-    category: Beginner # Beginner|Intermediate|Advanced|Series|Non-technical
+    category: TODO
+    level: Beginner # Beginner|Intermediate|Advanced|Series|Non-technical
     tags:
       - tutorial
     difficulty: 1 # number from 1 to 5
