--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,8 +30,9 @@ defaults:
 
 # Ordered by how they should appear in the curriculum list
 tutorial_categories:
-  - Federation Manager Authentication
   - Integration
+  - AAF Connection Types
+  - Federation Manager Authentication
   - Connect a Service
 
 # New tutorials should be added by running:
@@ -43,21 +44,22 @@ collections:
     title: Connect with Keycloak
     summary: A tutorial for connecting with Keycloak
     category: Connect a Service
+    curriculum: OpenID Connect
     level: Beginner
     tags:
       - TODO
-    difficulty: 1 
-    duration: 10 
-    status: draft 
+    difficulty: 1
+    duration: 10
+    status: draft
     published: 2024-02-06
     author: Your Name <your.name@email.domain>
 
-  connect-a-service:
+  connection-types:
     output: true
     permalink: /:collection/:name
-    title: Connect a new service
-    summary: A tutorial for connecting a new service
-    category: Connect a Service
+    title: Connection Types
+    summary: An overview of connection types available
+    category: AAF Connection Types
     curriculum: Connect a New Service
     level: Beginner
     tags:
@@ -74,7 +76,7 @@ collections:
     title: Log into Federation Manager
     summary: A tutorial for logging into Federation Manager
     category: Federation Manager Authentication
-    curriculum: Connect a New Service
+    curriculum: OpenID Connect
     level: Beginner
     tags:
       - TODO
@@ -90,6 +92,7 @@ collections:
     title: OpenID Connect Integration
     summary: A tutorial for OpenID Connect Integration
     category: Integration
+    curriculum: OpenID Connect
     level: Beginner
     tags:
       - TODO
@@ -135,7 +138,7 @@ collections:
     title: Connect an OIDC Service
     summary: A tutorial for Connecting an OIDC Service
     category: Connect a Service
-    curriculum: Connect a New Service
+    curriculum: OpenID Connect
     level: Beginner
     tags:
       - TODO
@@ -208,12 +211,12 @@ collections:
     published: 2024-02-16
     author: Your Name <your.name@email.domain>
 
-  connect-a-new-service-series:
+  openid-connect-series:
     output: true
     permalink: /:collection/:name
-    title: Connect a New Service Series
-    summary: Get started with Connecting to the AAF
-    category: Connect a Service
+    title: OpenID Connect Series
+    summary: Integrate and Connect with OIDC
+    curriculum: OpenID Connect
     level: Series # Beginner|Intermediate|Advanced|Series|Non-technical
     tags:
       - tutorial
