--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -239,3 +239,17 @@ collections:
     published: 2024-02-29
     author: Your Name <your.name@email.domain>
 
+  saml-series:
+    output: true
+    permalink: /:collection/:name
+    title: SAML Series
+    summary: Integrate and Connect with SAML
+    curriculum: SAML
+    level: Series # Beginner|Intermediate|Advanced|Series|Non-technical
+    tags:
+      - tutorial
+    difficulty: 4 # number from 1 to 5
+    duration: 10 # number of minutes
+    status: draft # draft or published
+    published: 2024-02-29
+    author: Your Name <your.name@email.domain>
