--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -187,6 +187,7 @@ collections:
     title: VerifID Integration
     summary: A tutorial for Verifid Integration
     category: Integration
+    curriculum: VerifID
     level: Beginner # Beginner|Intermediate|Advanced|Series|Non-technical
     tags:
       - tutorial
@@ -199,9 +200,10 @@ collections:
   connect-with-verifid:
     output: true
     permalink: /:collection/:name
-    title: Connect with Verifid
+    title: Connect with VerifID
     summary: A tutorial for Connect with Verifid
     category: Connect a Service
+    curriculum: VerifID
     level: Beginner # Beginner|Intermediate|Advanced|Series|Non-technical
     tags:
       - tutorial
@@ -232,6 +234,21 @@ collections:
     title: Rapid Connect Series
     summary: Integrate and Connect with Rapid Connect
     curriculum: Rapid Connect
+    level: Series # Beginner|Intermediate|Advanced|Series|Non-technical
+    tags:
+      - tutorial
+    difficulty: 1 # number from 1 to 5
+    duration: 10 # number of minutes
+    status: draft # draft or published
+    published: 2024-02-29
+    author: Your Name <your.name@email.domain>
+
+  verifid-series:
+    output: true
+    permalink: /:collection/:name
+    title: VerifID Series
+    summary: Integrate and connect with VerifID
+    curriculum: VerifID
     level: Series # Beginner|Intermediate|Advanced|Series|Non-technical
     tags:
       - tutorial
