--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -94,7 +94,7 @@ collections:
     output: true
     permalink: /:collection/:name
     title: OpenID Connect Integration
-    summary: A tutorial for OpenID Connect Integration
+    summary: A tutorial for OpenID Connect integration
     category: Integration
     curriculum: OpenID Connect
     level: Beginner
@@ -111,7 +111,7 @@ collections:
     output: true
     permalink: /:collection/:name
     title: Rapid Connect Integration
-    summary: A tutorial for Rapid Connect Integration
+    summary: A tutorial for Rapid Connect integration
     category: Integration
     curriculum: Rapid Connect
     level: Beginner
@@ -128,7 +128,7 @@ collections:
     output: true
     permalink: /:collection/:name
     title: SAML Integration
-    summary: A tutorial for SAML Integration
+    summary: A tutorial for SAML integration
     category: Integration
     curriculum: SAML
     level: Advanced
@@ -145,7 +145,7 @@ collections:
     output: true
     permalink: /:collection/:name
     title: Connect an OIDC Service
-    summary: A tutorial for Connecting an OIDC Service
+    summary: A tutorial for connecting an OIDC Service
     category: Connect a Service
     curriculum: OpenID Connect
     level: Beginner
@@ -162,7 +162,7 @@ collections:
     output: true
     permalink: /:collection/:name
     title: Connect a Rapid Connect Service
-    summary: A tutorial for Connecting a Rapid Connect Service
+    summary: A tutorial for connecting a Rapid Connect service
     category: Connect a Service
     curriculum: Rapid Connect
     level: Beginner
@@ -179,7 +179,7 @@ collections:
     output: true
     permalink: /:collection/:name
     title: Connect a SAML Service
-    summary: A tutorial for Connecting a SAML Service
+    summary: A tutorial for connecting a SAML Service
     category: Connect a Service
     curriculum: SAML
     level: Advanced
@@ -196,7 +196,7 @@ collections:
     output: true
     permalink: /:collection/:name
     title: VerifID Integration
-    summary: A tutorial for Verifid Integration
+    summary: A tutorial for VerifID integration
     category: Integration
     curriculum: VerifID
     level: Beginner # Beginner|Intermediate|Advanced|Series|Non-technical
@@ -213,7 +213,7 @@ collections:
     output: true
     permalink: /:collection/:name
     title: Connect with VerifID
-    summary: A tutorial for Connect with Verifid
+    summary: A tutorial for connecting with VerifID
     category: Connect a Service
     curriculum: VerifID
     level: Beginner # Beginner|Intermediate|Advanced|Series|Non-technical
@@ -230,7 +230,7 @@ collections:
     output: true
     permalink: /:collection/:name
     title: OpenID Connect Series
-    summary: Integrate and Connect with OIDC
+    summary: Integrate and connect with OIDC
     curriculum: OpenID Connect
     level: Series # Beginner|Intermediate|Advanced|Series|Non-technical
     tags:
@@ -246,7 +246,7 @@ collections:
     output: true
     permalink: /:collection/:name
     title: Rapid Connect Series
-    summary: Integrate and Connect with Rapid Connect
+    summary: Integrate and connect with Rapid Connect
     curriculum: Rapid Connect
     level: Series # Beginner|Intermediate|Advanced|Series|Non-technical
     tags:
