Update main page (for last time) and formatting

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -136,7 +136,7 @@ collections:
       - saml
       - tutorial
     difficulty: 4
-    duration: 10
+    duration: 120
     status: draft
     published: 2024-02-06
     author: Your Name <your.name@email.domain>
@@ -179,7 +179,7 @@ collections:
     output: true
     permalink: /:collection/:name
     title: Connect a SAML Service
-    summary: A tutorial for connecting a SAML Service
+    summary: A tutorial for connecting a SAML service
     category: Connect a Service
     curriculum: SAML
     level: Advanced
@@ -278,14 +278,14 @@ collections:
     output: true
     permalink: /:collection/:name
     title: SAML Series
-    summary: Integrate and Connect with SAML
+    summary: Integrate and connect with SAML
     curriculum: SAML
     level: Series # Beginner|Intermediate|Advanced|Series|Non-technical
     tags:
       - series
       - advanced
     difficulty: 4 # number from 1 to 5
-    duration: 10 # number of minutes
+    duration: 130 # number of minutes
     status: draft # draft or published
     published: 2024-02-29
     author: Your Name <your.name@email.domain>
